facet-json-legacy/tests/snapshots/diagnostics__error_at_end_of_long_input.snap
---
source: facet-json/tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::scan[0m

  [31m×[0m UnexpectedChar('!') (while parsing i32)
   ╭────
 [2m1[0m │ {"a": 1, "b": 2, "c": 3, "d": 4, "e": 5, "f": !}
   · [35;1m                                              ┬[0m
   ·                                               [35;1m╰── [35;1munexpected '!', expected i32[0m[0m
   ╰────
