facet-json-legacy/tests/snapshots/diagnostics__error_at_start_of_input.snap
---
source: facet-json/tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::unexpected_token[0m

  [31m×[0m unexpected token: got Eof, expected scalar value
   ╭────
   ╰────
