facet-json-legacy/tests/snapshots/diagnostics__semantic_error_number_out_of_range.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::number_out_of_range[0m

  [31m×[0m number `999999999999999999999999999999` out of range for u32
   ╭────
 [2m1[0m │ 999999999999999999999999999999
   · [35;1m───────────────┬──────────────[0m
   ·                [35;1m╰── [35;1mout of range for u32[0m[0m
   ╰────
