facet-json-legacy/tests/snapshots/diagnostics__semantic_error_type_mismatch.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::type_mismatch[0m

  [31m×[0m type mismatch: expected String, got unsigned integer
   ╭────
 [2m1[0m │ {"foo": 42, "bar": 123}
   · [35;1m                   ─┬─[0m
   ·                     [35;1m╰── [35;1mexpected String, got unsigned integer[0m[0m
   ╰────
