facet-json-legacy/tests/snapshots/diagnostics__semantic_error_unknown_field.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::unknown_field[0m

  [31m×[0m unknown field `unknown_field`, expected one of: ["name"]
   ╭────
 [2m1[0m │ {"name": "test", "unknown_field": 42}
   · [35;1m                 ───────┬───────[0m
   ·                         [35;1m╰── [35;1munknown field 'unknown_field'[0m[0m
   ╰────
