facet-json-legacy/tests/snapshots/diagnostics__syntax_error_multiline.snap
---
source: facet-json/tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::scan[0m

  [31m×[0m UnexpectedChar('?') (while parsing i32)
   ╭─[3:12]
 [2m2[0m │   "name": "test",
 [2m3[0m │   "value": ???
   · [35;1m           ┬[0m
   ·            [35;1m╰── [35;1munexpected '?', expected i32[0m[0m
 [2m4[0m │ }
   ╰────
