facet-json-legacy/tests/snapshots/diagnostics__syntax_error_with_context.snap
---
source: facet-json/tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::scan[0m

  [31m×[0m UnexpectedChar('@') (while parsing i32)
   ╭────
 [2m1[0m │ {"name": "test", "value": @invalid}
   · [35;1m                          ┬[0m
   ·                           [35;1m╰── [35;1munexpected '@', expected i32[0m[0m
   ╰────
